Update audio source in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Music Player</title>
 </head>
 <body style="text-align:center; margin-top:50px;">
-  <audio id="myaudio" src="https://raw.githubusercontent.com/USERNAME/music-image-player/main/music.mp3"></audio>
+  <audio id="myaudio" src="https://github.com/kylecpho-netizen/music-image-player/blob/main/_M%C3%B9a%20Thu%20B%C3%AAn%20H%E1%BB%93.mp3"></audio>
   
   <a href="#" onclick="document.getElementById('myaudio').play(); return false;">
     <img src="https://raw.githubusercontent.com/USERNAME/music-image-player/main/image.png" 
