Update image source and paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <audio id="myaudio" src="https://github.com/kylecpho-netizen/music-image-player/blob/main/_M%C3%B9a%20Thu%20B%C3%AAn%20H%E1%BB%93.mp3"></audio>
   
   <a href="#" onclick="document.getElementById('myaudio').play(); return false;">
-    <img src="https://raw.githubusercontent.com/USERNAME/music-image-player/main/image.png" 
+    <img src="https://github.com/kylecpho-netizen/music-image-player/blob/main/Lanier%20Fall.png" 
          alt="Click to play music" style="width:300px; border-radius:10px;">
   </a>
   
-  <p>Click vào ảnh để nghe nhạc</p>
+  <p>Click vào để nghe nhạc</p>
 </body>
 </html>
